--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Módulo Infografía Digital | Clase 2</title>
-        <!-- ESTO ES UN COMENTARIO DE HTML, EN LA LÍNEA QUE SIGUE ESTOY VINCULANDO AL CSS DE BOOTSTRAP v5.3 -->
+
+        <!-- VINCULACIÓN AL CSS DE BOOTSTRAP v5.3 -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
-        <!-- EN LAS LÍNEAS QUE SIGUEN ESTOY ESCRIBIENDO CSS ENTRE LAS ETIQUETAS CORRESPONDIENTES -->
+
+        <title>Módulo Infografía Digital | Clase 2</title>
+
         <style>
             /* esto es un comentario de CSS, primero voy por la Google Font */
-            @import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&family=PT+Serif&display=swap");
+            @import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
+            <style>
+            
 
             /* acá ajusto el ancho máximo */
             @media (min-width: 768px) {
@@ -19,13 +23,13 @@
             }
             /* acá cambio la fuente para todo el texto */
             :root {
-                --bs-body-font-family: "PT Sans", sans-serif;
+                --bs-body-font-family: "Fredoka", sans-serif;
             }
             /* acá cambio la fuente sólo para los títulos de primer, segundo y tercer nivel */
             h1,
             h2,
             h3 {
-                font-family: "PT Serif", serif;
+                font-family: "Fredoka", serif;
                 font-weight: 400;
             }
             /* acá ajusto el peso de la fuente que se usará en títulos de cuarto, quinto y sexto nivel */
@@ -38,6 +42,18 @@
     </head>
     <body>
         <header class="container">
+
+            <div class="container text-center">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <h1 class="mt-5 text-center">Este es el título principal</h1>
+                    </div>
+                    <div class="col">
+                      One of three columns
+                    </div>
+                </div>
+            </div>
+
             <div class="row align-items-center">
                 <div class="col-11 col-md-10 mx-auto">
                     <h1 class="mt-5 text-center">Este es el título principal</h1>
@@ -46,12 +62,14 @@
 
                     <h2 class="mb-3 text-center">Con su subtítulo</h2>
                     <!-- mb bot bajar margen hacia abajo -->
+
                     <p class="lead">
                         Y un lead. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus sollicitudin condimentum. Sed semper nunc id turpis rhoncus lacinia. Morbi sit amet luctus purus, at tempus magna. Integer rhoncus
                         faucibus ex, eu iaculis mi volutpat sit amet. Maecenas nulla dolor, tempor id sollicitudin ut, condimentum quis ante.
                     </p>
                 </div>
             </div>
+
         </header>
 
         <main>
