--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="container text-center">
                 <div class="row align-items-center">
                     <div class="col">
-                        <img src="https://github.com/KathyVicencio/Kathy.jpeg/blob/main/img/Logo_kathyjpeg.png">
+                        <img src="https://github.com/KathyVicencio/Kathy.jpeg/blob/main/img/Logo_kathyjpeg.png" class="w-50 mx-auto"/>
                         <h1 class="mt-5 text-center">Este es el título principal</h1>
                     </div>
                     <div class="col">
